--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==0.10.1
+Flask-Login==0.3.2
 Flask-Migrate==1.7.0
 Flask-SQLAlchemy==2.1
 Flask-Script==2.0.5
@@ -6,9 +7,17 @@ Jinja2==2.8
 Mako==1.0.3
 MarkupSafe==0.23
 SQLAlchemy==1.0.11
+Tempita==0.5.2
 Werkzeug==0.11.3
 alembic==0.8.4
+decorator==4.0.6
 gunicorn==19.4.5
 itsdangerous==0.24
+pbr==1.8.1
 psycopg2==2.6.1
 python-editor==0.5
+rauth==0.7.2
+requests==2.9.1
+six==1.10.0
+sqlalchemy-migrate==0.10.0
+sqlparse==0.1.18
