--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==0.10.1
+Flask-Bootstrap==3.3.5.7
 Flask-Login==0.3.2
 Flask-Migrate==1.7.0
+Flask-Moment==0.5.1
 Flask-SQLAlchemy==2.1
 Flask-Script==2.0.5
 Flask-WTF==0.12
@@ -13,6 +15,7 @@ WTForms==2.1
 Werkzeug==0.11.3
 alembic==0.8.4
 decorator==4.0.6
+dominate==2.1.16
 gunicorn==19.4.5
 itsdangerous==0.24
 pbr==1.8.1
@@ -23,3 +26,4 @@ requests==2.9.1
 six==1.10.0
 sqlalchemy-migrate==0.10.0
 sqlparse==0.1.18
+visitor==0.1.2
